asg/tests/fail/array/type_nested_value_tuple_3x2_fail.leo
function main() {
    let b: [[u8; 2]; 3] = [0; (2, 3)]; // initializer (incorrectly reversed ordering)
}